tests/src/frontend/typechecking/exhaustiveness/invalid/child_override_base_class_multi_params_base_named_nonexh.sk
base class A{a: Int, b: String}
class B{x: String, t: Int} extends A

fun myMatch(x: A): String {
  x match {
  | A{a => 1, b => "a"} -> "P"
  | A{a => 2, b => _} -> "a"
  | B{x => "Hi", t => 1, b => "b"} -> "s"
  | A{a => 42, b => "c"} -> "s"
  }
}
